Wed Oct 27 17:04:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* input-local-file.rb, p-input-local-file.rb: BUG#276対応

Fri Oct 22 18:20:53 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* vfile.rb: BUG#275対応

Fri Oct 22 18:02:14 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* c-sort.rb, p-sort.rb: BUG#274対応

Fri Oct 22 14:49:59 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy, controller, inspector, master, node, processor fairy.rb,
	  controller.rb, master.rb, c-barrier.rb, c-direct-product.rb,
	  c-find.rb, c-inject.rb, node.rb, processor.rb: DeepConnect0.4.05
	  対応(REQ#273)

Wed Oct 20 18:22:03 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-sort.rb: REQ#263対応
	* c-sort.rb, p-sort.rb: BUG#271対応(sortの問題)
	* p-basic-group-by.rb, p-sort.rb: BUG#270対応洩れ
	* node.rb, processor.rb, p-task.rb, p-filter.rb: ログメッセージの
	  ために, to_s を定義した.
	* p-group-by.rb: デバッグメッセージ追加

Fri Oct 15 22:45:39 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* base-app.rb: BUG#272対応. fork/execの代りにspwanを用いることにした.

Fri Oct 15 18:44:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb, base-app.rb, log.rb: BUG#272対応. fork後にログ出力を
	  ストップするようにした.

Fri Oct 15 13:53:18 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-group-by.rb: BUG#270対応. group_byで@exports[idx]にExportが割
	  り当てられていない場合の処理が抜けていた.

Fri Oct 15 12:21:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* equijoin.rb: BUG#270対応. BUG#266対応でエンバグしていた...

Fri Oct 15 00:22:02 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/simple_hash.c: REQ#268対応. ハッシュ値をFixnumに限定

Thu Oct 14 23:12:22 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/simple_hash.c: REQ#268対応. nullターミネートでない文字列に対応

Thu Oct 14 22:50:09 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* testc.rb: REQ#268対応. テストコード追加

Thu Oct 14 19:50:53 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-group-by.rb: BUG#269対応. group_byが正常に動作しなかった.

Thu Oct 14 17:36:54 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
